# Datacraft

./: .gitignore  README.md  generate_csvs.py  main.py  my_autoviz.py  my_blaze.py  my_dabl.py  my_fugue.py  my_pyjanitor.py  my_sweetviz.py  my_vaex.py  pyproject.toml  requirements.in  requirements.txt
data/: bigfile.csv  data.csv  test_data.csv  train_data.csv  your_data.csv
notebooks/: my_bamboolib.ipynb  my_lux.ipynb
src/main/: generate_csvs.py  my_autoviz.py  my_dabl.py  my_fugue.py  my_pingouin.py  my_pyjanitor.py  my_sweetviz.py  my_vaex.py  pyjanitor_custom_function.py
src/notebooks/: my_ ipyvizzu.ipynb  my_plotnine.ipynb
src/visualization/: my_datashader.py  my_joypy.py  my_plotnine.py  my_pycirclize.py  my_weave.py
visualization/: my_datashader.py  my_pywaffle.py  my_sankeyview.py
