[project]
name = "explore-all-the-libs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "autoviz",
    "bamboolib",
    "blaze>=0.10.1",
    "dabl",
    "datashader>=0.17.0",
    "fugue",
    "ipyvizzu",
    "joypy>=0.2.6",
    "lux-api",
    "matplotlib>=3.7.4",
    "numpy>=1.23.5",
    "pandas",
    "pingouin",
    "plotnine>=0.12.4",
    "pycirclize>=1.9.1",
    "pyjanitor",
    "pywaffle>=1.1.1",
    "sankeyview>=1.1.8",
    "sweetviz",
    "vaex",
    "weave>=0.51.56",
]
