[project]
name = "Datacraft"
version = "0.1.0"
description = "Python Libraries That Handle Big Data and Visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datashader>=0.17.0",
    "fugue==0.9.1",
    "joypy>=0.2.6",
    "matplotlib>=3.7.4",
    "numpy>=1.23.5",
    "pandas==1.5.3",
    "pingouin==0.5.5",
    "plotnine>=0.12.4",
    "pycirclize>=1.9.1",
    "pywaffle>=1.1.1",
    "sweetviz==2.3.1",
    "vaex==4.17.0",
    "pyjanitor>=0.31.0",
]
